improve linked data export
- chunks=None as default for `create_dataset` to mimic behavior of `h5py`
- improved formalized representation of the HDF5 file structure based on the Allotrope Foundation's ontology
- removed unclear parameter `resolve_keys` from `dump_jsonld()` and `serialize()`
- HDF.File is not automatically returned if `h5.frdf.type` is called

--- a/docs/userguide/wrapper/FAIRAttributes.ipynb
+++ b/docs/userguide/wrapper/FAIRAttributes.ipynb
@@ -91,11 +91,13 @@
    "id": "feb4342f-7460-4bb1-afe9-6f35158a2a7a",
    "metadata": {},
    "source": [
-    "### Assigning metadata to the file rather than the rootgroup\n",
+    "### Assigning metadata to the file rather than the root group\n",
     "\n",
-    "If we want to describe the file using attributes, the rootgroup \"/\" is the way to go. However, there we might want to distinguish between the actual file and the root group. For this, we can also use the accessory `frdf`, which allows assigning rdf triples to the file.\n",
+    "If we want to describe the file using attributes, the root group \"/\" is the way to go. However, there we might want to distinguish between the actual file and the root group. For this, we can also use the accessory `frdf`, which allows assigning RDF triples to the file.\n",
     "\n",
-    "In the following example, we add the creation date as a rootgroup-attribute but explain it as a file attribute rather than a group attribute. For the effect, check out the jsonld-dump:"
+    "In the following example, we add the creation date as a root group attribute but explain it as a file attribute rather than a group attribute.\n",
+    "\n",
+    "Using the method `serialize()` the content is displayed as a Linked Data form:"
    ]
   },
   {
@@ -111,7 +113,7 @@
     "    h5.attrs[\"creation_date\"] = datetime.today()\n",
     "    h5.frdf[\"creation_date\"].predicate = \"http://purl.org/dc/terms/created\"\n",
     "\n",
-    "    print(h5.dump_jsonld(structural=True, indent=2))"
+    "print(h5tbx.serialize(h5.hdf_filename, format=\"ttl\", structural=False, semantic=True, indent=2))"
    ]
   },
   {
@@ -329,7 +331,9 @@
    "source": [
     "### 2. JSON-LD extraction\n",
     "\n",
-    "Write the JSON-LD file and share it with others or a repository. The toolbox provides `dump`-methods through the `jsonld` module. It might look a bit overwelming, however dedicated scripts can perfectly work with it while humans still can read it (with a bit of practice and patience...):"
+    "Write the JSON-LD or Turtle (ttl) file and share it with others or a repository. The toolbox provides `dump`-methods through the `jsonld` module or - in the newer version of h5tbx - the `serialize` method, allowing to write various linked data formats.\n",
+    "\n",
+    "It might look a bit overwelming, however dedicated scripts can perfectly work with it while humans still can read it (with a bit of practice and patience...):"
    ]
   },
   {
@@ -340,37 +344,15 @@
    "outputs": [],
    "source": [
     "print(\n",
-    "    h5tbx.dump_jsonld(\n",
+    "    h5tbx.serialize(\n",
     "        hdf_filename,\n",
+    "        format=\"ttl\",\n",
     "        indent=2,\n",
     "        context={'m4i': 'http://w3id.org/nfdi4ing/metadata4ing#',\n",
-    "                 'foaf': 'http://xmlns.com/foaf/0.1/'}\n",
+    "                 'foaf': 'http://xmlns.com/foaf/0.1/',\n",
+    "                 'obo': 'http://purl.obolibrary.org/obo/'}\n",
     "    )\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "091fcceb-21fc-4600-a0a9-fada2123d11a",
-   "metadata": {},
-   "source": [
-    "Dump it to the file rather than to the screen:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c913948-8ba9-4409-b052-559e7c8e3a72",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from h5rdmtoolbox import jsonld\n",
-    "with open('hdf_meta.jsonld', 'w') as f:\n",
-    "    jsonld.dump(hdf_filename, f, indent=2,\n",
-    "        context={'m4i': 'http://w3id.org/nfdi4ing/metadata4ing#',\n",
-    "                 'foaf': 'http://xmlns.com/foaf/0.1/'})\n",
-    "                # context={'foaf': 'http://xmlns.com/foaf/0.1/',\n",
-    "                #                                    'm4i': 'http://w3id.org/nfdi4ing/metadata4ing#'})"
    ]
   },
   {
@@ -580,6 +562,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7e43f95b-4afb-42cd-bf75-a7ee6536cdd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from h5rdmtoolbox.wrapper import jsonld"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "eed644e6-8ddd-4dc3-9eea-c83fa7825cf0",
    "metadata": {},
    "outputs": [],
@@ -609,14 +601,11 @@
    "source": [
     "with h5tbx.File(mode='w') as h5:\n",
     "    _ = h5.create_dataset('test_dataset', data=np.array([[1, 2], [3, 4], [5.4, 1.9]]))\n",
-    "    _ = h5.create_dataset('test_dataset 2', data=4.5)\n",
     "    h5.create_dataset('grp/subgrp/vel', data=4)\n",
     "    h5.attrs['name', ontolutils.SCHEMA.name] = 'test attr'\n",
-    "    # _ = h5.create_dataset('test_dataset', data=5.4)\n",
-    "    jd = jsonld.dumpd(h5, structural=True)\n",
-    "    jds = jsonld.dumps(h5, structural=True, indent=2)\n",
-    "from pprint import pprint\n",
-    "pprint(jd, indent=1)"
+    "\n",
+    "    ttl = h5tbx.serialize(h5.filename, structural=True, format=\"ttl\")\n",
+    "print(ttl)"
    ]
   },
   {
