move linked data to separate sub-package

--- a/docs/practical_examples/metadata4ing.ipynb
+++ b/docs/practical_examples/metadata4ing.ipynb
@@ -66,8 +66,7 @@
    "source": [
     "with h5tbx.File() as h5:\n",
     "    h5.create_group('metadata')\n",
-    "    h5tbx.jsonld.to_hdf(h5.metadata, source='min_m4i_ex.jsonld')\n",
-    "    # h5.dump(collapsed=False)"
+    "    h5tbx.jsonld.to_hdf(h5.metadata, source='min_m4i_ex.jsonld')"
    ]
   },
   {
@@ -92,7 +91,6 @@
     "        h5.hdf_filename,\n",
     "        format=\"ttl\",\n",
     "        structural=False,\n",
-    "        indent=2,\n",
     "        context={\"@import\": \"https://w3id.org/nfdi4ing/metadata4ing/m4i_context.jsonld\"})\n",
     ")"
    ]
