fix docs by removing standard names

--- a/docs/howto/ht005.ipynb
+++ b/docs/howto/ht005.ipynb
@@ -28,16 +28,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Convention \"h5rdmtoolbox-tutorial-convention\" filename: C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\data\\tutorial_convention.yaml\n",
-      "creating directory for the convention\n",
-      "No special functions defined\n",
-      "Found 0 function(s) in C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\conventions\\h5rdmtoolbox_tutorial_convention\\h5rdmtoolbox_tutorial_convention.py\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "using(\"h5rdmtoolbox-tutorial-convention\")"
@@ -53,24 +43,6 @@
     "\n",
     "cv = h5tbx.convention.Convention.from_yaml(yaml_filename)\n",
     "h5tbx.use(cv)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c9f9e7fe-977a-4e7b-b914-76ca62be87df",
-   "metadata": {},
-   "source": [
-    "The convention requires a standard name table. It comes with a default one, but let's also load a local one:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "7ae5e6c2-a2d0-4c36-b0d1-f13301b0b951",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "snt_yaml_filename = tutorial.get_standard_name_table_yaml_file()"
    ]
   },
   {
@@ -265,17 +237,48 @@
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
        "    background-color: rgba(0,0,0,.0);\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       "/* Tooltip container */\r\n",
+       ".tooltip {\r\n",
+       "position: relative;\r\n",
+       "display: inline-block;\r\n",
+       "cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Tooltip text */\r\n",
+       ".tooltip .tooltiptext {\r\n",
+       "visibility: hidden;\r\n",
+       "width: 300px;\r\n",
+       "background-color: #555;\r\n",
+       "color: #fff;\r\n",
+       "text-align: center;\r\n",
+       "border-radius: 6px;\r\n",
+       "padding: 5px;\r\n",
+       "position: absolute;\r\n",
+       "z-index: 1;\r\n",
+       "bottom: 125%;\r\n",
+       "left: 50%;\r\n",
+       "margin-left: -60px;\r\n",
+       "opacity: 0;\r\n",
+       "transition: opacity 0.3s;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Show the tooltip on hover */\r\n",
+       ".tooltip:hover .tooltiptext {\r\n",
+       "visibility: visible;\r\n",
+       "opacity:  1;\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5189644000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5189644000\">\n",
+       "                        <input id=\"group-ds--419631796511500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--419631796511500\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.9.0a0</li><li style=\"list-style-type: none; font-style: italic\">contact : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">data_type : experimental</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1)</li></li>\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">contact: <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">data_type: experimental</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table: fan_standard_name_shorttable</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -290,10 +293,7 @@
     }
    ],
    "source": [
-    "with h5tbx.File(data_type='experimental', contact=h5tbx.__author_orcid__,\n",
-    "               standard_name_table=snt_yaml_filename) as h5:\n",
-    "    snt = h5.standard_name_table\n",
-    "    c = h5.contact\n",
+    "with h5tbx.File(data_type='experimental', contact=h5tbx.__author_orcid__) as h5:\n",
     "    h5.dump()"
    ]
   },
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
