--- a/docs/howto/ht006.ipynb
+++ b/docs/howto/ht006.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0adaef45-87fe-49ea-a958-6a7e42a1225f",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f8adf390-7f76-4139-b8c2-7e9ea3d9502f",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "16204386-bb4e-4bec-8fca-cfd33a64903d",
    "metadata": {},
    "outputs": [
@@ -115,13 +115,14 @@
        "  --xr-background-color-row-odd: var(--jp-layout-color2, #eeeeee);\n",
        "}\n",
        "\n",
-       "html[theme=dark],\n",
-       "body[data-theme=dark],\n",
+       "html[theme=\"dark\"],\n",
+       "html[data-theme=\"dark\"],\n",
+       "body[data-theme=\"dark\"],\n",
        "body.vscode-dark {\n",
        "  --xr-font-color0: rgba(255, 255, 255, 1);\n",
        "  --xr-font-color2: rgba(255, 255, 255, 0.54);\n",
        "  --xr-font-color3: rgba(255, 255, 255, 0.38);\n",
-       "  --xr-border-color: #1F1F1F;\n",
+       "  --xr-border-color: #1f1f1f;\n",
        "  --xr-disabled-color: #515151;\n",
        "  --xr-background-color: #111111;\n",
        "  --xr-background-color-row-even: #111111;\n",
@@ -166,7 +167,7 @@
        ".xr-sections {\n",
        "  padding-left: 0 !important;\n",
        "  display: grid;\n",
-       "  grid-template-columns: 150px auto auto 1fr 20px 20px;\n",
+       "  grid-template-columns: 150px auto auto 1fr 0 20px 0 20px;\n",
        "}\n",
        "\n",
        ".xr-section-item {\n",
@@ -174,7 +175,9 @@
        "}\n",
        "\n",
        ".xr-section-item input {\n",
-       "  display: none;\n",
+       "  display: inline-block;\n",
+       "  opacity: 0;\n",
+       "  height: 0;\n",
        "}\n",
        "\n",
        ".xr-section-item input + label {\n",
@@ -184,6 +187,10 @@
        ".xr-section-item input:enabled + label {\n",
        "  cursor: pointer;\n",
        "  color: var(--xr-font-color2);\n",
+       "}\n",
+       "\n",
+       ".xr-section-item input:focus + label {\n",
+       "  border: 2px solid var(--xr-font-color0);\n",
        "}\n",
        "\n",
        ".xr-section-item input:enabled + label:hover {\n",
@@ -207,7 +214,7 @@
        "\n",
        ".xr-section-summary-in + label:before {\n",
        "  display: inline-block;\n",
-       "  content: '►';\n",
+       "  content: \"►\";\n",
        "  font-size: 11px;\n",
        "  width: 15px;\n",
        "  text-align: center;\n",
@@ -218,7 +225,7 @@
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label:before {\n",
-       "  content: '▼';\n",
+       "  content: \"▼\";\n",
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label > span {\n",
@@ -290,15 +297,15 @@
        "}\n",
        "\n",
        ".xr-dim-list:before {\n",
-       "  content: '(';\n",
+       "  content: \"(\";\n",
        "}\n",
        "\n",
        ".xr-dim-list:after {\n",
-       "  content: ')';\n",
+       "  content: \")\";\n",
        "}\n",
        "\n",
        ".xr-dim-list li:not(:last-child):after {\n",
-       "  content: ',';\n",
+       "  content: \",\";\n",
        "  padding-right: 5px;\n",
        "}\n",
        "\n",
@@ -448,23 +455,21 @@
        "  stroke: currentColor;\n",
        "  fill: currentColor;\n",
        "}\n",
-       "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;torque&#x27; (dim_0: 3)&gt;\n",
+       "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;torque&#x27; (dim_0: 3)&gt; Size: 12B\n",
        "1 2 3\n",
        "Dimensions without coordinates: dim_0\n",
        "Attributes:\n",
-       "    units:       N*m\n",
-       "    PROVENANCE:  {&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;}, &#x27;g...</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'torque'</div><ul class='xr-dim-list'><li><span>dim_0</span>: 3</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-fd4ca0f1-b003-48fc-b69f-61c9e284cac9' class='xr-array-in' type='checkbox' ><label for='section-fd4ca0f1-b003-48fc-b69f-61c9e284cac9' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>1 2 3</span></div><div class='xr-array-data'><pre>array([1, 2, 3])</pre></div></div></li><li class='xr-section-item'><input id='section-4ea617ac-2f03-494a-926d-5ff7ecb790ef' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-4ea617ac-2f03-494a-926d-5ff7ecb790ef' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-59634ce0-0308-43f6-b194-8f44b67cbb14' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-59634ce0-0308-43f6-b194-8f44b67cbb14' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-f01af1bc-0e62-4c92-895f-f89a07d46b57' class='xr-section-summary-in' type='checkbox'  checked><label for='section-f01af1bc-0e62-4c92-895f-f89a07d46b57' class='xr-section-summary' >Attributes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>N*m</dd><dt><span>PROVENANCE :</span></dt><dd>{&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;}, &#x27;group&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;}, &#x27;filename&#x27;: &#x27;C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp_7\\\\tmp2.hdf&#x27;}}</dd></dl></div></li></ul></div></div>"
+       "    units:    N*m</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'torque'</div><ul class='xr-dim-list'><li><span>dim_0</span>: 3</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-e490254f-3528-45f6-8696-bd84d7cc055a' class='xr-array-in' type='checkbox' ><label for='section-e490254f-3528-45f6-8696-bd84d7cc055a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>1 2 3</span></div><div class='xr-array-data'><pre>array([1, 2, 3])</pre></div></div></li><li class='xr-section-item'><input id='section-528510e1-28d5-4632-9d5c-3a197676101c' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-528510e1-28d5-4632-9d5c-3a197676101c' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-47a9d71a-efab-47e5-8599-0efadad0acb8' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-47a9d71a-efab-47e5-8599-0efadad0acb8' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-2a566949-85bb-431d-a3ca-36e35ea07316' class='xr-section-summary-in' type='checkbox'  checked><label for='section-2a566949-85bb-431d-a3ca-36e35ea07316' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>N*m</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
-       "<xarray.DataArray 'torque' (dim_0: 3)>\n",
+       "<xarray.DataArray 'torque' (dim_0: 3)> Size: 12B\n",
        "1 2 3\n",
        "Dimensions without coordinates: dim_0\n",
        "Attributes:\n",
-       "    units:       N*m\n",
-       "    PROVENANCE:  {'HDF': {'root': {'__h5rdmtoolbox_version__': '0.9.0a0'}, 'g..."
+       "    units:    N*m"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7068224a-2d51-4883-a42b-2b35e92aeebf",
    "metadata": {
     "scrolled": true
@@ -514,13 +519,14 @@
        "  --xr-background-color-row-odd: var(--jp-layout-color2, #eeeeee);\n",
        "}\n",
        "\n",
-       "html[theme=dark],\n",
-       "body[data-theme=dark],\n",
+       "html[theme=\"dark\"],\n",
+       "html[data-theme=\"dark\"],\n",
+       "body[data-theme=\"dark\"],\n",
        "body.vscode-dark {\n",
        "  --xr-font-color0: rgba(255, 255, 255, 1);\n",
        "  --xr-font-color2: rgba(255, 255, 255, 0.54);\n",
        "  --xr-font-color3: rgba(255, 255, 255, 0.38);\n",
-       "  --xr-border-color: #1F1F1F;\n",
+       "  --xr-border-color: #1f1f1f;\n",
        "  --xr-disabled-color: #515151;\n",
        "  --xr-background-color: #111111;\n",
        "  --xr-background-color-row-even: #111111;\n",
@@ -565,7 +571,7 @@
        ".xr-sections {\n",
        "  padding-left: 0 !important;\n",
        "  display: grid;\n",
-       "  grid-template-columns: 150px auto auto 1fr 20px 20px;\n",
+       "  grid-template-columns: 150px auto auto 1fr 0 20px 0 20px;\n",
        "}\n",
        "\n",
        ".xr-section-item {\n",
@@ -573,7 +579,9 @@
        "}\n",
        "\n",
        ".xr-section-item input {\n",
-       "  display: none;\n",
+       "  display: inline-block;\n",
+       "  opacity: 0;\n",
+       "  height: 0;\n",
        "}\n",
        "\n",
        ".xr-section-item input + label {\n",
@@ -583,6 +591,10 @@
        ".xr-section-item input:enabled + label {\n",
        "  cursor: pointer;\n",
        "  color: var(--xr-font-color2);\n",
+       "}\n",
+       "\n",
+       ".xr-section-item input:focus + label {\n",
+       "  border: 2px solid var(--xr-font-color0);\n",
        "}\n",
        "\n",
        ".xr-section-item input:enabled + label:hover {\n",
@@ -606,7 +618,7 @@
        "\n",
        ".xr-section-summary-in + label:before {\n",
        "  display: inline-block;\n",
-       "  content: '►';\n",
+       "  content: \"►\";\n",
        "  font-size: 11px;\n",
        "  width: 15px;\n",
        "  text-align: center;\n",
@@ -617,7 +629,7 @@
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label:before {\n",
-       "  content: '▼';\n",
+       "  content: \"▼\";\n",
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label > span {\n",
@@ -689,15 +701,15 @@
        "}\n",
        "\n",
        ".xr-dim-list:before {\n",
-       "  content: '(';\n",
+       "  content: \"(\";\n",
        "}\n",
        "\n",
        ".xr-dim-list:after {\n",
-       "  content: ')';\n",
+       "  content: \")\";\n",
        "}\n",
        "\n",
        ".xr-dim-list li:not(:last-child):after {\n",
-       "  content: ',';\n",
+       "  content: \",\";\n",
        "  padding-right: 5px;\n",
        "}\n",
        "\n",
@@ -847,21 +859,17 @@
        "  stroke: currentColor;\n",
        "  fill: currentColor;\n",
        "}\n",
-       "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;torque&#x27; (dim_0: 3)&gt;\n",
+       "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;torque&#x27; (dim_0: 3)&gt; Size: 24B\n",
        "[kg·m²/s²] 1.0 2.0 3.0\n",
-       "Dimensions without coordinates: dim_0\n",
-       "Attributes:\n",
-       "    PROVENANCE:  {&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;}, &#x27;g...</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'torque'</div><ul class='xr-dim-list'><li><span>dim_0</span>: 3</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-2c383b47-a6db-4250-a602-08e4fe1a8135' class='xr-array-in' type='checkbox' ><label for='section-2c383b47-a6db-4250-a602-08e4fe1a8135' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>[kg·m²/s²] 1.0 2.0 3.0</span></div><div class='xr-array-data'><table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[1.0 2.0 3.0]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>kg m<sup>2</sup>/s<sup>2</sup></td></tr></tbody></table></div></div></li><li class='xr-section-item'><input id='section-730164ac-a0b8-46ec-9785-fef516ad2ab8' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-730164ac-a0b8-46ec-9785-fef516ad2ab8' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-78e25f99-2854-42d3-a8c5-48079c2c930a' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-78e25f99-2854-42d3-a8c5-48079c2c930a' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-c8b7e461-1c98-4dfd-ae2f-c8574bd97721' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c8b7e461-1c98-4dfd-ae2f-c8574bd97721' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>PROVENANCE :</span></dt><dd>{&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;}, &#x27;group&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;}, &#x27;filename&#x27;: &#x27;C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp_7\\\\tmp2.hdf&#x27;}}</dd></dl></div></li></ul></div></div>"
+       "Dimensions without coordinates: dim_0</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'torque'</div><ul class='xr-dim-list'><li><span>dim_0</span>: 3</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-9a2baea1-bea3-4c97-ac13-e86a69327009' class='xr-array-in' type='checkbox' ><label for='section-9a2baea1-bea3-4c97-ac13-e86a69327009' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>[kg·m²/s²] 1.0 2.0 3.0</span></div><div class='xr-array-data'><table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[1.0 2.0 3.0]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>kg m<sup>2</sup>/s<sup>2</sup></td></tr></tbody></table></div></div></li><li class='xr-section-item'><input id='section-70b12cd6-b7c9-4770-a29e-10a333ea3159' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-70b12cd6-b7c9-4770-a29e-10a333ea3159' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-b9dfa02a-dc33-4f49-8e24-12ebf83fb75f' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-b9dfa02a-dc33-4f49-8e24-12ebf83fb75f' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-9439e9f2-2cbc-41ec-9b2a-d6b3098b9289' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-9439e9f2-2cbc-41ec-9b2a-d6b3098b9289' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
-       "<xarray.DataArray 'torque' (dim_0: 3)>\n",
+       "<xarray.DataArray 'torque' (dim_0: 3)> Size: 24B\n",
        "[kg·m²/s²] 1.0 2.0 3.0\n",
-       "Dimensions without coordinates: dim_0\n",
-       "Attributes:\n",
-       "    PROVENANCE:  {'HDF': {'root': {'__h5rdmtoolbox_version__': '0.9.0a0'}, 'g..."
+       "Dimensions without coordinates: dim_0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +912,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
