--- a/docs/userguide/convention/examples/metadata4ing.ipynb
+++ b/docs/userguide/convention/examples/metadata4ing.ipynb
@@ -13,15 +13,7 @@
    "execution_count": 1,
    "id": "5d881134-bc2a-41ef-92cd-4dccc9445ede",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Failed to import module h5tbx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "from h5rdmtoolbox import convention"
@@ -62,7 +54,6 @@
     "\n",
     "    def set(self, parent, value, attrs=None):\n",
     "        \"\"\"Is called when attribute of a standard attribute is set\"\"\"\n",
-    "        print(value)\n",
     "        grp_name = f'{value[\"role\"]}Person'\n",
     "        i = 0\n",
     "        while grp_name in parent:\n",
@@ -159,13 +150,6 @@
    "id": "218b9643-c9a9-4b3f-8a64-a7cfdc9dea1b",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'first_name': 'Matthias', 'last_name': 'Probst', 'role': 'Creator'}\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -389,8 +373,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4562357300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4562357300\">\n",
+       "                        <input id=\"group-ds--434054213251500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--434054213251500\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "<ul class=\"h5tb-attr-list\">\n",
@@ -398,28 +382,28 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-CreatorPerson-4563285200\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-CreatorPerson-4563285200\">\n",
+       "                        <input id=\"group-ds-CreatorPerson-434054214840500\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-CreatorPerson-434054214840500\">\n",
        "                        CreatorPerson<span>(2)</span></label>\n",
        "                  \n",
        "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                    <ul id=\"ds-1-/CreatorPerson/first_name-45645297001\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/CreatorPerson/first_name-45645297002\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <ul id=\"ds-1-/CreatorPerson/first_name-4340542171605001\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/CreatorPerson/first_name-4340542171605002\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
        "                    <label class='h5tb-varname' \n",
-       "                    for=\"ds-2-/CreatorPerson/first_name-45645297002\">first_name</label>: [|S8] data=b'Matthias'\n",
+       "                    for=\"ds-2-/CreatorPerson/first_name-4340542171605002\">first_name</label>: [|S8] data=b'Matthias'\n",
        "                    \n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">description : The first name of a person</li><li style=\"list-style-type: none; font-style: italic\">iri : <a href=\"http://xmlns.com/foaf/0.1/firstName\">http://xmlns.com/foaf/0.1/firstName</a></li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">description: The first name of a person</li><li style=\"list-style-type: none; font-style: italic\">iri: <a href=\"http://xmlns.com/foaf/0.1/firstName\">http://xmlns.com/foaf/0.1/firstName</a></li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                    <ul id=\"ds-1-/CreatorPerson/last_name-45661873001\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/CreatorPerson/last_name-45661873002\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <ul id=\"ds-1-/CreatorPerson/last_name-4340542190494001\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/CreatorPerson/last_name-4340542190494002\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
        "                    <label class='h5tb-varname' \n",
-       "                    for=\"ds-2-/CreatorPerson/last_name-45661873002\">last_name</label>: [|S6] data=b'Probst'\n",
+       "                    for=\"ds-2-/CreatorPerson/last_name-4340542190494002\">last_name</label>: [|S6] data=b'Probst'\n",
        "                    \n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">description : The last name of a person</li><li style=\"list-style-type: none; font-style: italic\">iri : <a href=\"http://xmlns.com/foaf/0.1/lastName\">http://xmlns.com/foaf/0.1/lastName</a></li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">description: The last name of a person</li><li style=\"list-style-type: none; font-style: italic\">iri: <a href=\"http://xmlns.com/foaf/0.1/lastName\">http://xmlns.com/foaf/0.1/lastName</a></li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
@@ -466,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
