--- a/docs/userguide/convention/examples/EngMeta.ipynb
+++ b/docs/userguide/convention/examples/EngMeta.ipynb
@@ -35,13 +35,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Failed to import module h5tbx\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "Convention(\"EngMeta\")"
@@ -400,11 +393,11 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5395760600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5395760600\">\n",
+       "                        <input id=\"group-ds--434084069330300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--434084069330300\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
-       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">contact : {\"name\": \"Matthias Probst\"}</li><li style=\"list-style-type: none; font-style: italic\">creator : {\"name\": \"Matthias Probst\", \"id\": \"https://orcid.org/0000-0001-8729-0482\", \"role\": \"Researcher\"}</li><li style=\"list-style-type: none; font-style: italic\">pid : {\"id\": \"123\", \"type\": \"other\"}</li><li style=\"list-style-type: none; font-style: italic\">title : Test file to demonstrate usage of EngMeta schema</li>\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">contact: {\"name\": \"Matthias Probst\"}</li><li style=\"list-style-type: none; font-style: italic\">creator: {\"name\": \"Matthias Probst\", \"id\": \"https://orcid.org/0000-0001-8729-0482\", \"role\": \"Researcher\"}</li><li style=\"list-style-type: none; font-style: italic\">pid: {\"id\": \"123\", \"type\": \"other\"}</li><li style=\"list-style-type: none; font-style: italic\">title: Test file to demonstrate usage of EngMeta schema</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -503,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
